kubernetes/django-clearsessions.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django-clearsessions
  labels:
    env: dev
    app: django
    tier: web
spec:
  containers:
    - name: django-clearsessions
      image: django_app:latest
      imagePullPolicy: Never
      command: [./manage.py, clearsessions]
  restartPolicy: Never
