kubernetes/ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
spec:
  rules:
  - host: star-burger.test
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: django
            port: 
              number: 80
